add hover and the country

--- a/index.html
+++ b/index.html
@@ -58,36 +58,49 @@
                     <button>I'm Feeling Lucky</button>
                 </div>
             </section>
+            </div>
+            
+            <!-- Offers of Google -->
+            <div class="main-terms">
+                Google Offered in :
+                <a href="">Espaniol (Latinoamerica)</a>
+                <a href="">Quechua</a>
         </main>
         <!-- Footer Section -->
         <footer>
-            <!-- Left footer -->
-            <ul class="footer-left">
-                <li>
-                    <a href="">Advertising</a>
-                </li>
-                <li>
-                    <a href="">Business</a>
-                </li>
-                <li>
-                    <a href="">About</a>
-                </li>
-                <li>
-                    <a href="">How Search works</a>
-                </li>
-            </ul>
-            <!-- Right footer -->
-            <ul class="footer-right">
-                <li>
-                    <a href="">Privacy</a>
-                </li>
-                <li>
-                    <a href="">Terms</a>
-                </li>
-                <li>
-                    <a href="">Settings</a>
-                </li>
-            </ul>
+            <span class="country-footer">
+                <p> Peru</p>
+            </span>
+            
+            <div class="nav-footer">
+                <!-- Left footer -->
+                <ul class="footer-left">
+                    <li>
+                        <a href="">Advertising</a>
+                    </li>
+                    <li>
+                        <a href="">Business</a>
+                    </li>
+                    <li>
+                        <a href="">About</a>
+                    </li>
+                    <li>
+                        <a href="">How Search works</a>
+                    </li>
+                </ul>
+                <!-- Right footer -->
+                <ul class="footer-right">
+                    <li>
+                        <a href="">Privacy</a>
+                    </li>
+                    <li>
+                        <a href="">Terms</a>
+                    </li>
+                    <li>
+                        <a href="">Settings</a>
+                    </li>
+                </ul>
+            </div>
         </footer>
 
 </body>
