End of the Google Clone

--- a/index.html
+++ b/index.html
@@ -1,12 +1,14 @@
 <!DOCTYPE html>
 <html lang="es">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./assets/css/styless.css">
     <link href="https://kit-free.fontawesome.com/releases/latest/css/free.min.css" media="all" rel="stylesheet">
-    <title>Clone Google</title>
+    <title>Google Clone</title>
 </head>
+
 <body>
     <div class="container">
 
@@ -24,7 +26,10 @@
         <main class="main-container">
             <!-- Image Google -->
             <div class="container-img">
-                <img src="https://www.google.co.ve/images/branding/googlelogo/2x/googlelogo_color_272x92dp.png" alt="">
+                <figure class="img-google">
+                    <img src="https://www.google.co.ve/images/branding/googlelogo/2x/googlelogo_color_272x92dp.png"
+                        alt="">
+                </figure>
             </div>
             <!-- Search Google -->
             <div class="container-main-search">
@@ -41,7 +46,7 @@
             </div>
             <!-- Offers of Google -->
             <div class="main-terms">
-                Google Offered in : 
+                Google Offered in :
                 <a href="">Espaniol (Latinoamerica)</a>
                 <a href="">Quechua</a>
         </main>
@@ -68,5 +73,5 @@
         </footer>
     </div>
 </body>
-    
+
 </html>
