rewrite the code of the header in a new way

--- a/index.html
+++ b/index.html
@@ -14,14 +14,24 @@
 
         <header>
             <!-- Navegacion de Google -->
-            <div class="nav">
-                <a href="#">Gmail</a>
-                <a href="#">Images</a>
-                <a href="#">
-                    <i class="fas fa-th" aria-hidden="true"></i>
-                </a>
-                <button class="button-sign">Sign in</button>
-            </div>
+            <nav>
+                <ul class="nav-right-section">
+                    <li>
+                        <a href="">Gmail</a>
+                    </li>
+                    <li>
+                        <a href="">Imagenes</a>
+                    </li>
+                    <li class="menu-icon">
+                        <a href=""></a>
+                    </li>
+                    <li>
+                        <a href="">
+                            <img src="https://lh3.googleusercontent.com/ogw/ADGmqu-nGIhMU045XVtPHEz6j6HhG0wnGC5RA6ecIaJ4=s64-c-mo" alt="User Avatar">
+                        </a>
+                    </li>
+                </ul>
+            </nav>
         </header>
         <main class="main-container">
             <!-- Image Google -->
