re-write the main section of Google

--- a/index.html
+++ b/index.html
@@ -10,8 +10,6 @@
 </head>
 
 <body>
-    <div class="container">
-
         <header>
             <!-- Navegacion de Google -->
             <nav>
@@ -33,55 +31,35 @@
                 </ul>
             </nav>
         </header>
-        <main class="main-container">
-            <!-- Image Google -->
-            <div class="container-img">
-                <figure class="img-google">
-                    <img src="https://www.google.co.ve/images/branding/googlelogo/2x/googlelogo_color_272x92dp.png"
-                        alt="">
-                </figure>
-            </div>
-            <!-- Search Google -->
-            <div class="container-main-search">
-                <div class="main-search">
-                    <i class="fas fa-search" aria-hidden="true"></i>
+        <!-- Main Section -->
+        <main>
+            <!-- Section of the Google Logo -->
+            <section class="main-logo">
+                <img src="https://www.google.co.ve/images/branding/googlelogo/2x/googlelogo_color_272x92dp.png" alt="">
+            </section>
+            <!-- Search Section -->
+            <section class="main-input">
+                <div class="main-input-container">
+                    <span class="search-icon">
+
+                    </span>
                     <input type="text">
-                    <img src="./assets/img/voz.png" alt="">
+                    <a class="micro-icon" href="">
+
+                    </a>
                 </div>
-            </div>
-            <!-- Buttons of search -->
-            <div class="main-buttons">
-                <input type="submit" value="Google Search">
-                <input type="submit" value="I'm Feeling Lucky">
-            </div>
-            <!-- Offers of Google -->
-            <div class="main-terms">
-                Google Offered in :
-                <a href="">Espaniol (Latinoamerica)</a>
-                <a href="">Quechua</a>
+            </section>
+            <!-- Buttons Section -->
+            <section class="main-buttons">
+                <div>
+                    <button>Search with Google</button>
+                </div>
+                <div>
+                    <button>I'm Feeling Lucky</button>
+                </div>
+            </section>
         </main>
-        <!-- Footer -->
-        <footer class="footer-container">
-            <!-- First Section of the Country -->
-            <div class="country-footer">
-                <span>Peru</span>
-            </div>
-            <!-- Second Section of Terms and more -->
-            <div class="footer-nav">
-                <span class="footer-nav-right">
-                    <a href="">Privacy</a>
-                    <a href="">Terms</a>
-                    <a href="">Settings</a>
-                </span>
-                <span class="footer-nav-left">
-                    <a href="">Advertising</a>
-                    <a href="">Business</a>
-                    <a href="">About</a>
-                    <a href="">How Search Works</a>
-                </span>
-            </div>
-        </footer>
-    </div>
+
 </body>
 
 </html>
